--- a/stylesheet.css
+++ b/stylesheet.css
@@ -21,7 +21,7 @@ h1 {
 }
 
 .slider-container a:hover {
-    background-color: #b9b9b9;
+    background-color: #929292;
     cursor: default;
 }
 
@@ -38,7 +38,7 @@ h1 {
 
 .slider-container li {
     /*flex-grow: 1;*/
-    background-color: #f5f5f5;
+    background-color: #dbdbdb;
     width: 80px;
     height: 80px;
 }
